# Ubuntu-Ansible-Setup

./: Dockerfile  LICENSE  ansible.cfg  inventory.yml  playbook.yml  pyproject.toml  requirements.yml
.github/workflows/: build-docker.yml  cleanBuild.yml  deploy-squad.yml  lint-inventory.yml  start-squad.yml  start-squadjs.yml
roles/docker/defaults/: main.yml
roles/docker/files/: docker-compose.yml
roles/docker/tasks/: install-docker.yml  main.yml  setup-docker-registry.yml
roles/docker/templates/: registry-site.nginx
roles/initial-setup/defaults/: main.yml
roles/initial-setup/files/: banner  sshd_config
roles/initial-setup/handlers/: main.yml
roles/initial-setup/tasks/: .null-ls_863450_users.yml  dns.yml  firewall.yml  main.yml  ssh.yml  users.yml
roles/initial-setup/templates/: authorized_keys.j2
roles/squad-server/defaults/: main.yml
roles/squad-server/handlers/: main.yml
roles/squad-server/tasks/: deploy-configs.yml  main.yml  nested_ports_open.yml  nested_servers_loop.yml  start-container.yml
roles/squad-server/templates/: SquadJS.galac.json.j2  SquadJS.mee-french.json.j2  SquadJS.steel-division.json.j2  SquadJS.tactical.json.j2  SquadJS.teamwork.json.j2  SquadJS.vanilla.json.j2  docker-compose.yml.j2
roles/squad-server/templates/server-config/: Admins.cfg.j2  Bans.cfg.j2  CustomOptions.cfg.j2  ExcludedLayers.cfg.j2  ExcludedLevels.cfg.j2  LayerRotation.cfg.j2  LayerVoting.cfg.j2  LayerVotingLowPlayers.cfg.j2  LevelRotation.cfg.j2  (+8 more)
roles/squad-server/tests/: test.yml
roles/squad-server/vars/: main.yml
scripts/: docker-entry.sh
