[tool.poetry]
name = "ssfcu-newserver-poc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.9.0"
pywinrm = "^0.4.3"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
