[tool.poetry]
name = "asg-ansible"
version = "0.1.0"
description = ""
authors = ["Price Hiller <price@orion-technologies.io>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.9.0"
pywinrm = "^0.4.3"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
