[tool.poetry]
name = "asg-ansible"
version = "0.1.0"
description = ""
authors = ["Price Hiller <price@orion-technologies.io>"]

[tool.poetry.dependencies]
python = ">=3.11"
ansible = ">=8.2.0"
pywinrm = ">=0.4.3"

[tool.poetry.dev-dependencies]
ansible-lint = ">=6.3.0"

[tool.poetry.group.dev.dependencies]
yamllint = ">=1.29.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
